[DSTEW-1580] - Testing WIP